# whisper-dashboard

./: .env.example  .gitignore  LICENSE  README.md  dashboard.py  main.py  pyproject.toml  requirements-diarization.txt  requirements.txt  transcriber.py
static/: dashboard.css  dashboard.js
templates/: dashboard.html
